<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary_transparent">


        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnInvite"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="140dp"
            android:layout_weight="1"
            android:text="Invite" />
    </LinearLayout>


</LinearLayout>